--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         <p> Many of us are looking foward to the end of the school year like most kids, 
             however, 
             it is important to look at how we have grown and the work we have done.
+            During school, especially intersession students were able to learn a variety of things that could help them in the future,
+            as you can see, mine was web design. Taking this class really impacted what I wanted to learn how to do. 
+            In previous years, I had used a bit of css and html and wanted to learn a lot more of it,
+            through this class and my digital prototyping class, I was able to learn so much more about how HTML and CSS works and I am happy with that.
+            learning coding has opened up another world of opportunities and things that I can learn over this quarantine and I really enjoy it.
+
+            
      
         </p>
 
