adding more images and text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </div>
 <div class="bodyWrapper">
     <div class="bodyObject bodyObjectpadding">
-        <h2 class="rainbow_text">The end of it all</h2>
+        <h3 class="rainbow_text">The End Of Tt All</h3>
         <p> Many of us are looking foward to the end of the school year like most kids, 
             however, 
             it is important to look at how we have grown and the work we have done.
@@ -20,8 +20,17 @@
             In previous years, I had used a bit of css and html and wanted to learn a lot more of it,
             through this class and my digital prototyping class, I was able to learn so much more about how HTML and CSS works and I am happy with that.
             learning coding has opened up another world of opportunities and things that I can learn over this quarantine and I really enjoy it.
+            <br>
+            <br>
+            <p>
 
-            
+                I think another impactful thing on everyone was the stay at home order because of this pandemic.
+                While I certanily didn't like it, as most didn't as well, this was a good time to reflect on what you have done and explore some new things.
+                Something that I was able to learn and get to do with my family, was baking. While I am not the greatest, nor did I think I would do it,
+                it has been fun hanging out with family and making some baked goods. 
+            </p>
+            <img src="Cookies!.jpg">
+
      
         </p>
 
