--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
                 Something that I was able to learn and get to do with my family, was baking. While I am not the greatest, nor did I think I would do it,
                 it has been fun hanging out with family and making some baked goods. 
             </p>
+            <br>
+            <br>
+            <p>
+                I guess I'm grateful for terraria during this quarantine because I have been able to play with friends on this game.
+                Also because its a super long grindy game, we haven't ran out of things to do in it. Overall I just enjoy this game
+                because I can connect with friends and talk to them while also being able to play an enjoyable game.
+
+
+            </p>
             <img src="Cookies!.jpg">
 
      
