--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
                 it has been fun hanging out with family and making some baked goods. 
             </p>
             <br>
-            <br>
             <p>
                 I guess I'm grateful for terraria during this quarantine because I have been able to play with friends on this game.
                 Also because its a super long grindy game, we haven't ran out of things to do in it. Overall I just enjoy this game
                 because I can connect with friends and talk to them while also being able to play an enjoyable game.
             </p>
             <img src="Cookies!.jpg">
-
+            <p>(Ill replace with a picture of something I have made once I bake something again)</p>
      
         </p>
 
