Adding new page and dropdown bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="End of the year.css">
 </head>
 <body>
+    <div class="aboutWrapper">
+        <div class="navWrapper">
+            <div onClick="window.location.href='#'" class="navWrapper_1">What We have Done</div>
+            <div onClick="window.location.href='LookingFoward.html'" class="navWrapper_2"> Things I am Looking Foward To</div>
+   </div>
 </div>
 <div class="bodyWrapper">
     <div class="bodyObject bodyObjectpadding">
