--- a/LookingFoward.html
+++ b/LookingFoward.html
@@ -6,3 +6,30 @@
 <head>
     <title>My Wishes Going Foward</title>
     <link rel="stylesheet" href="End of the year.css">
+</head>
+<body>
+    <div class="aboutWrapper">
+        <div class="navWrapper">
+            <div onClick="window.location.href='index.html'" class="navWrapper_1">What We have Done</div>
+            <div onClick="window.location.href='#'" class="navWrapper_2"> Things I am Looking Foward To</div>
+   </div>
+</div>
+<div class="bodyWrapper">
+    <div class="bodyObject bodyObjectpadding">
+        <br>
+        <br>
+        <br>
+        <br>
+        <h3 class="rainbow_text">What I'm Looking Foward To</h3>
+
+        <p>
+            Especially with this school year coming to a close, and the year almost half way done, many of us are having higher hopes for next year and what can come of that.
+            I for one would like some change from what has happened this year overall, whether it be the police issues, the virus/quarantine, or the environmental problems we need to fix,
+            I hope that humanity can find a middle ground and work together to solve these problems.
+
+
+
+        </p>
+
+
+</body>
